https://github.com/Yudibrandao/Proyecto1.git

--- a/quienessomos.html
+++ b/quienessomos.html
@@ -13,41 +13,23 @@
 </head>
 
 <body>
+   
+    <div class="nuestraHistoria">
 
+        <div>
 
-  
-    <div class="containerQuienesSomos" href="">
-        <div class="tituloHistoria">
-
-            <H1> NUESTRA HISTORIA...</H1>
-  
-      </div>
-
-        <div class=" imagenFondoQuienes">
-         
-
-        </div>
-
-        <div class="quienesSomos">
             <p>
+                Oh que Crepes, es una empresa familiar fundada en el año 2019 con
+                más de cuatro años de experiencia en la capital venezolana. Poder
+                probar un rico postre en nuestro restaurante es una experiencia para
+                los sentidos, no solo para el obvio (el del gusto), si no también
+                para el olfato, la vista, el tacto… gracias a su cuidada y mimada
+                decoración en cada uno de ellos.
+            </p>
+            </di>
 
-            <h3>Oh que Crepes, es una empresa familiar fundada en el año 2019 con más de cuatro años de experiencia
-                en
-                la capital venezolana.
-
-                Poder probar un rico postre en nuestro restaurante es una experiencia para los sentidos, no solo para el
-                obvio (el del gusto), si no también para el olfato, la vista, el tacto… gracias a su cuidada y
-                mimada decoración en cada uno de ellos.
-
-                En conclusión...
-
-                “Una mezcla de fiesta, tradición y color.”
-
-                </p>
-            </h3>
-
+            <img src="index.html" class="rounded" alt="...">
         </div>
-
 
     </div>
 
