--- a/cartacrepes.html
+++ b/cartacrepes.html
@@ -4,13 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>https://ohquecrepes.com/contactoohquecrepes/</title>
+    <title>https://ohquecrepes.com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
     <link rel="stylesheet" href="styles.css">
-
-
 </head>
 
 <body>
@@ -32,12 +29,12 @@
                         <a class="nav-link tituloContacto" href="contacto.html"> Contacto </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="cartacrepes.html" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle " href="" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Nuestra Carta
                         </a>
                         <ul class="dropdown-menu menuDesplegable">
-                            <li><a class="dropdown-item menuDesplegable" href="cartacrepes.html">Crepes</a></li>
+                            <li><a class="dropdown-item menuDesplegable" href="index.html">Crepes</a></li>
                             <li><a class="dropdown-item menuDesplegable" href="cartawaffle.html">Waffles</a></li>
                             <li><a class="dropdown-item menuDesplegable" href="helados.html">Helados</a></li>
                         </ul>
@@ -49,62 +46,26 @@
         </div>
     </nav>
 
-    <div class="configuracionLogo">
-
-        <div>
-            <div class="contactoMovil">
-
-                <img src="imagenes/logo.png" alt="">
-                <p>
-                <h3> +58 000 000 </h3> <br>
-
-                <a href="info@Ohquecrepes.com">
-                    <h5> info@Ohquecrepes.com </h5><br>
-                </a>
-
-                <h3> C. de Juan de Mariana, 15, 28045 Madrid</h3>
-
-                </p>
-            </div>
-
-            <div>
-
-                <div class="input-group mb-3 contactoInformacion">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon1">Buscar</button>
-                    <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon"
-                        aria-describedby="button-addon1">
-                </div>
-
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Nombre y Apellido"
-                        aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
-                </div>
-
-            </div>
-        </div>
-
+    <div class="crepe1">
+        <h3> CREPE DE CHOCOLATE Y CREMA</h3><br>
+        <img src="imagenes/crep1.jpeg" class="rounded float-start" alt="...">
 
     </div>
 
-    <div class="mapaUbicacion">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.4750409444755!2d-3.6863441000000003!3d40.398326000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422706bff431ad%3A0xe1297343074f52c0!2sTalent%20Garden%20Madrid!5e0!3m2!1spt-PT!2ses!4v1696149601569!5m2!1spt-PT!2ses"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>">
-        <div class="mapa">
-            <h1> </h1>
-        </div>
-
-
+    <div class="crepe2">
+        <img src="imagenes/crep2.jpg" class="rounded float-end" alt="...">
+        <h3> CREPE DE CHOCOLATE Y CREMA</h3>
     </div>
+
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
