--- a/cartawaffle.html
+++ b/cartawaffle.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>https://ohquecrepes.com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
     <link rel="stylesheet" href="styles.css">
-
+   
 </head>
-
 <body>
-
 
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid pruebaBarra">
@@ -48,26 +44,20 @@
             </div>
         </div>
     </nav>
-    <div class="collage">
 
-        <img src="imagenes/waffle5.webp" class="rounded float-end" alt="..."><br>
-
-        <img src="imagenes/crepe6.jpg" class="rounded float-start" alt="..."><br>
-
-
-        <img src="imagenes/crep2.jpg" class="rounded float-end" alt="..."><br>
-
-        <img src="imagenes/waffle6.webp" class="rounded float-end" alt="..."><br>
+    <div class="waffle1">
+        <h3> WAFFLE CON FRESA Y NUTELLA</h3><br>
+        <img src="imagenes/waffle2.jpg" class="rounded float-start" alt="...">
 
     </div>
-    
 
-
-
+    <div class="wafle2">
+        <img src="imagenes/waffle5.webp" class="rounded float-end" alt="...">
+        <h3> WAFFLE CON MIEL Y FRESAS</h3>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
-
 </html>
