--- a/cartacrepes.html
+++ b/cartacrepes.html
@@ -41,21 +41,36 @@
                     </li>
 
                 </ul>
-              
+
             </div>
         </div>
     </nav>
 
-    <div class="crepe1">
-        <h3> CREPE DE CHOCOLATE Y CREMA</h3><br>
-        <img src="imagenes/crep1.jpeg" class="rounded float-start" alt="...">
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h4> CREPE RELLENO DE NUTELLA CON NATA Y SIROPE. . . . 12€</h4>
+            <img src="imagenes/crep1.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <h4> CREPE DE FRUTAS CON NATA Y NUTELLA....12€. . . .10€</h4>
+            <img src="imagenes/crep2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <h4> CREPE DE CHOCOLOLATE CON BANANA Y SIROPE....12€</h4>
+            <img src="imagenes/crep3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
-    </div>
-
-    <div class="crepe2">
-        <img src="imagenes/crep2.jpg" class="rounded float-end" alt="...">
-        <h3> CREPE DE CHOCOLATE Y CREMA</h3>
-    </div>
 
 
 
