--- a/cartawaffle.html
+++ b/cartawaffle.html
@@ -44,17 +44,26 @@
             </div>
         </div>
     </nav>
+    <div class="card" style="width: 18rem;">
+        <img src="imagenes/waffle2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">MODIFICAR TEXTO</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="imagenes/waffle3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">MODIFICAR TEXTO</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="imagenes/waffle5.webp" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">MODIFICAR TEXTO</p>
+        </div>
+      </div>
 
-    <div class="waffle1">
-        <h3> WAFFLE CON FRESA Y NUTELLA</h3><br>
-        <img src="imagenes/waffle2.jpg" class="rounded float-start" alt="...">
 
-    </div>
-
-    <div class="wafle2">
-        <img src="imagenes/waffle5.webp" class="rounded float-end" alt="...">
-        <h3> WAFFLE CON MIEL Y FRESAS</h3>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
