--- a/helados.html
+++ b/helados.html
@@ -46,16 +46,27 @@
             </div>
         </div>
     </nav>
-    <div class="helado1">
-        <h3> CANASTA DE HELADOS DE 3 PORCIONES</h3><br>
-        <img src="imagenes/canastadehelado.jpg" class="rounded float-start" alt="...">
+   
+    <div class="card" style="width: 18rem;">
+        <img src="imagenes/helado1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Crepe de frutas y crema chantilly_____</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="imagenes/helado.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">MODIFICAR TEXTO</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="imagenes/canastadehelado.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">MODIFICAR TEXTO</p>
+        </div>
+      </div>
 
-    </div>
 
-    <div class="helado2">
-        <img src="imagenes/helado1.jpg" class="rounded float-end" alt="...">
-        <h3> WAFFLE CON MIEL Y FRESAS</h3>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
