--- a/index.html
+++ b/index.html
@@ -14,60 +14,71 @@
 
 <body>
 
+    <div class="proyecto1">
+        <nav class="navbar navbar-expand-lg navbarP ">
+            <div class="container-fluid pruebaBarra">
 
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid pruebaBarra">
+                <a class="navbar-brand" href="index.html"> Oh! QUE CREPES </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                        <li class="nav-item">
+                            <a class="nav-link quienesSomos" aria-current="page" href="quienessomos.html"> Quienes
+                                Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link tituloContacto" href="contacto.html"> Contacto </a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle " href="" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Nuestra Carta
+                            </a>
+                            <ul class="dropdown-menu menuDesplegable">
+                                <li><a class="dropdown-item menuDesplegable" href="cartacrepes.html">Crepes</a></li>
+                                <li><a class="dropdown-item menuDesplegable" href="cartawaffle.html">Waffles</a></li>
+                                <li><a class="dropdown-item menuDesplegable" href="helados.html">Helados</a></li>
+                            </ul>
+                        </li>
 
-            <a class="navbar-brand" href="index.html"> Oh! QUE CREPES </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                    <li class="nav-item">
-                        <a class="nav-link quienesSomos" aria-current="page" href="quienessomos.html"> Quienes Somos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link tituloContacto" href="contacto.html"> Contacto </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle " href="" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Nuestra Carta
-                        </a>
-                        <ul class="dropdown-menu menuDesplegable">
-                            <li><a class="dropdown-item menuDesplegable" href="cartacrepes.html">Crepes</a></li>
-                            <li><a class="dropdown-item menuDesplegable" href="cartawaffle.html">Waffles</a></li>
-                            <li><a class="dropdown-item menuDesplegable" href="helados.html">Helados</a></li>
-                        </ul>
-                    </li>
+                    </ul>
 
-                </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="parteBaja">
+
+            <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);"
+                href="">
+                <svg class="bi" aria-hidden="true">
+                    <use xlink:href="#clipboard"></use>
+                </svg>
+                "PARA UN POSTRE... SIEMPRE HAY ESPACIO "
+            </a>
+
+
+            <img src="imagenes/waffle5.webp" class="img-fluid imagenPresentacion" alt="...">
+            <div class=" inicioParrafo">
 
             </div>
+
+            <div class="footer">
+
+                <h5>@2019. - Todos los derechos reservados | AVISO LEGAL · POLÍTICA DE COOKIES · POLÍTICA DE PRIVACIDAD
+                </h5>
+
+            </div>
+
         </div>
-    </nav>
-    <div class="collage">
-
-        <img src="imagenes/waffle5.webp" class="rounded float-end" alt="..."><br>
-
-        <img src="imagenes/crepe6.jpg" class="rounded float-start" alt="..."><br>
-
-
-        <img src="imagenes/crep2.jpg" class="rounded float-end" alt="..."><br>
-
-        <img src="imagenes/waffle6.webp" class="rounded float-end" alt="..."><br>
-
     </div>
-    
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
+
 </body>
 
 </html>
